--- a/autopark.html
+++ b/autopark.html
@@ -19,21 +19,21 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="picture/telegram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="picture/instagram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="picture/whatsapp.svg" width="75%" height="75%"></a>
+            <a href="index.html"><img src="picture/telegram.svg" width="75%" height="75%"></a>
+            <a href="index.html"><img src="picture/instagram.svg" width="75%" height="75%"></a>
+            <a href="index.html"><img src="picture/whatsapp.svg" width="75%" height="75%"></a>
         </div>
         <div class="main-icon">
             <h3 style="color: #EDDEA4;  -webkit-text-stroke: 1px #000000; padding-top: 4%;">ПРОКАТКА</h3>
-            <a href="main.html" style="margin-left: 2%;">
+            <a href="index.html" style="margin-left: 2%;">
                 <img src="picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
         <div class="link">
-            <a href="main.html" style=" text-decoration: none; color: black; font-size: 100%;"> ГЛАВНАЯ</a>
+            <a href="index.html" style=" text-decoration: none; color: black; font-size: 100%;"> ГЛАВНАЯ</a>
             <a href="autopark.html" style=" text-decoration: none; color: black; font-size: 100%; "> АВТОПАРК</a>
             <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: 100%; "> КОНТАКТЫ</a>
-            <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
+            <a href="index.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
         </div>
         <div class="menu-btn">
             <span></span>
@@ -43,9 +43,9 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="main.html">Главная</a></li>
+                    <li><a href="index.html">Главная</a></li>
                     <li><a href="autopark.html">Автопарк</a></li>
-                    <li><a href="main.html">Цены</a></li>
+                    <li><a href="index.html">Цены</a></li>
                     <li><a href="kontakt.html">Контакты</a></li>
                 </ul>
             </nav>
@@ -208,13 +208,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="index.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="index.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="index.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
