--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="picture/telegram.svg" width="60%" height="60%"></a>
-            <a href="main.html"><img src="picture/instagram.svg" width="60%" height="60%"></a>
-            <a href="main.html"><img src="picture/whatsapp.svg" width="60%" height="60%"></a>
+            <a href="index.html"><img src="picture/telegram.svg" width="60%" height="60%"></a>
+            <a href="index.html"><img src="picture/instagram.svg" width="60%" height="60%"></a>
+            <a href="index.html"><img src="picture/whatsapp.svg" width="60%" height="60%"></a>
         </div>
         <div class="main-icon">
             <h3 style="color: #EDDEA4;  -webkit-text-stroke: 1px #000000; padding-top: 4%;">ПРОКАТКА</h3>
-            <a href="main.html" style="margin-left: 2%;">
+            <a href="index.html" style="margin-left: 2%;">
                 <img src="picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
@@ -34,10 +34,10 @@
 
         <div class="link">
 
-            <a href="main.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ГЛАВНАЯ</a>
+            <a href="index.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ГЛАВНАЯ</a>
             <a href="autopark.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> АВТОПАРК</a>
             <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> КОНТАКТЫ</a>
-            <a href="main.html " style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ЦЕНЫ</a>
+            <a href="index.html " style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ЦЕНЫ</a>
 
         </div>
         <div class="menu-btn">
@@ -48,9 +48,9 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="main.html">Главная</a></li>
+                    <li><a href="index.html">Главная</a></li>
                     <li><a href="autopark.html">Автопарк</a></li>
-                    <li><a href="main.html">Цены</a></li>
+                    <li><a href="index.html">Цены</a></li>
                     <li><a href="kontakt.html">Контакты</a></li>
                 </ul>
             </nav>
@@ -109,9 +109,9 @@
             <div class="left">
                 <div class="element-animation">
                     <div class="tex">
-                        <h2><a href="main.html">Главная</a></h2>
+                        <h2><a href="index.html">Главная</a></h2>
                     <h2><a href="autopark.html">Автопарк</a></h2>
-                    <h2><a href="main.html">Цены</a></h2>
+                    <h2><a href="index.html">Цены</a></h2>
                     <h2><a href="kontakt.html">Контакты</a></h2>
                     </div>
                 </div>
@@ -131,13 +131,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="index.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="index.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="index.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
