--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
         <div class="link">
 
-            <a href="index.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ГЛАВНАЯ</a>
-            <a href="autopark.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> АВТОПАРК</a>
-            <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> КОНТАКТЫ</a>
-            <a href="index.html " style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ЦЕНЫ</a>
+            <a href="index.html" style=" text-decoration: none; color: black;"> ГЛАВНАЯ</a>
+            <a href="autopark.html" style=" text-decoration: none; color: black"> АВТОПАРК</a>
+            <a href="kontakt.html" style=" text-decoration: none; color: black;"> КОНТАКТЫ</a>
+            <a href="index.html " style=" text-decoration: none; color: black;"> ЦЕНЫ</a>
 
         </div>
         <div class="menu-btn">
